# 登録ダイアログ表示処理  - app/src/main/java/com/kansoubunko/kiyota/kansoubunko/activity/RegistActivity.java  - ダイアログフラグメント呼び出し処理を追加  - app/src/main/java/com/kansoubunko/kiyota/kansoubunko/fragment/BookReviewDialogFragment.java  - ダイアログフラグメント表示処理を追加  - app/src/main/res/layout/activity_login.xml  - ログイン画面デザインを一部修正  - app/src/main/res/layout/activity_regist.xml  - 登録ボタンにidを付与  - app/src/main/res/values/strings.xml  - ダイアログ表示文言を追加  - app/src/main/res/values/styles.xml  - ダイアログのスタイルを追加(未使用)

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,11 +1,14 @@
 <resources>
     <string name="app_name">KANSOUBUNKO</string>
-    <string name="login_name">NAME</string>
-    <string name="login_pass">PASSWORD</string>
+    <string name="login_name">名前:</string>
+    <string name="login_pass">パスワード:</string>
     <string name="login_login">ログイン</string>
     <string name="login_regist">登録</string>
     <string name="regist_book_log">感想文を記入する</string>
     <string name="list_count_finish">感想件数 ：</string>
     <string name="list_regist">新しい本を登録する</string>
     <string name="no_book_img">picture</string>
+    <string name="regist_book_ok">登録する</string>
+    <string name="regist_book_cancel">キャンセル</string>
+    <string name="regist_book_title">感想を記入してください。(100字以内)</string>
 </resources>
