# ヘルパークラス作成 / ログイン処理作成 / ダイアログフラグメント表示処理作成  - app/src/main/java/com/kansoubunko/kiyota/kansoubunko/activity/LoginActivity.java  - ログインdao処理追加  - app/src/main/java/com/kansoubunko/kiyota/kansoubunko/activity/RegistActivity.java  - ダイアログフラグメント表示処理修正  - app/src/main/java/com/kansoubunko/kiyota/kansoubunko/constants/KansouContract.java  - 定数クラスを作成  - app/src/main/java/com/kansoubunko/kiyota/kansoubunko/constants/KansouProvider.java  - プロバイダークラスを作成  - app/src/main/java/com/kansoubunko/kiyota/kansoubunko/dao/KansouDao.java  - daoクラスを作成  - app/src/main/java/com/kansoubunko/kiyota/kansoubunko/dto/KansouEntity.java  - dtoを作成  - app/src/main/java/com/kansoubunko/kiyota/kansoubunko/util/LogUtil.java  - ログ出力の定型文クラスを作成  - app/src/main/res/layout/activity_login.xml  - idを追加  - app/src/main/res/layout/activity_regist.xml  - textを@stringsに変更  - app/src/main/res/values/strings.xml  - タイトルを追加

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,5 @@
     <string name="regist_book_ok">登録する</string>
     <string name="regist_book_cancel">キャンセル</string>
     <string name="regist_book_title">感想を記入してください。(100字以内)</string>
+    <string name="book_default_title">タイトル</string>
 </resources>
