--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,6 @@
     <string name="regist_book_cancel">キャンセル</string>
     <string name="regist_book_title">感想を記入してください。(100字以内)</string>
     <string name="book_default_title">タイトル</string>
+    <string name="login_regist_error_message">名前とパスワードを入力してください。</string>
+    <string name="login_login_error_message">名前またはパスワードが正しくありません。</string>
 </resources>
