# ログイン処理fix  - app/src/main/java/com/kansoubunko/kiyota/kansoubunko/activity/LoginActivity.java  - db処理を修正、バリデーションを追加  - app/src/main/java/com/kansoubunko/kiyota/kansoubunko/activity/MainActivity.java  - log出力処理を追加  - app/src/main/java/com/kansoubunko/kiyota/kansoubunko/dao/KansouDao.java  - 不要なdaoを削除  - app/src/main/java/com/kansoubunko/kiyota/kansoubunko/dto/BookInfoEntity.java  - dtoを分離  - app/src/main/java/com/kansoubunko/kiyota/kansoubunko/dto/UserInfoEntity.java  - dtoを分離  - app/src/main/java/com/kansoubunko/kiyota/kansoubunko/util/BookInfoHelper.java  - helperを分離  - app/src/main/java/com/kansoubunko/kiyota/kansoubunko/util/UserInfoHelper.java  - helperを分離  - app/src/main/res/values/strings.xml  - エラーメッセージ文言を追加

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,6 +12,8 @@
     <string name="regist_book_cancel">キャンセル</string>
     <string name="regist_book_title">感想を記入してください。(100字以内)</string>
     <string name="book_default_title">タイトル</string>
-    <string name="login_regist_error_message">名前とパスワードを入力してください。</string>
+    <string name="login_error_message">名前とパスワードを入力してください。</string>
     <string name="login_login_error_message">名前またはパスワードが正しくありません。</string>
+    <string name="login_regist_same_name_error_message">入力された名前はすでに使用されています。</string>
+    <string name="login_length_error_message">20文字以内で入力してください。</string>
 </resources>
