--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,7 +10,8 @@
     <string name="no_book_img">picture</string>
     <string name="regist_book_ok">登録する</string>
     <string name="regist_book_cancel">キャンセル</string>
-    <string name="regist_book_title">感想を記入してください。(100字以内)</string>
+    <string name="regist_book_review">感想を記入してください。(100字以内)</string>
+    <string name="regist_book_title">タイトルを記入する</string>
     <string name="book_default_title">タイトル</string>
     <string name="login_error_message">名前とパスワードを入力してください。</string>
     <string name="login_login_error_message">名前またはパスワードが正しくありません。</string>
