--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,6 +18,8 @@
     <string name="regist_book_title">タイトルを記入する</string>
     <string name="book_default_title">タイトル</string>
     <string name="setting_edit_button">プロフィールを編集する</string>
+    <string name="setting_follow">フォロー</string>
+    <string name="setting_follow_delete">フォロー解除</string>
     <string name="login_error_message">名前とパスワードを入力してください。</string>
     <string name="login_login_error_message">名前またはパスワードが正しくありません。</string>
     <string name="login_regist_same_name_error_message">入力された名前はすでに使用されています。</string>
